--- a/owp/src/main/res/menu/menu_main.xml
+++ b/owp/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.owp.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/about"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="关于"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/contact"
+        android:orderInCategory="100"
+        android:title="联系我们"
         app:showAsAction="never" />
 </menu>
